<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.musicstudio.MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/mixer2"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="20dp"
        android:orientation="vertical"
        android:background="@color/primary_transparency"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/company_name"
            android:fontFamily="@font/nunitosansbold"
            android:textSize="@dimen/title_text_size"
            android:textColor="@color/primary_light" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textColor="@color/primary_light"
            android:textSize="@dimen/card_text_size"
            android:layout_marginTop="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textColor="@color/primary_light"
            android:textSize="@dimen/card_text_size"
            android:layout_marginTop="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/primary_light"
            android:textSize="@dimen/card_text_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/website"
            android:textColor="@color/primary_light"
            android:textSize="@dimen/card_text_size"
            android:layout_marginTop="8dp"
            android:linksClickable="true" />

    </LinearLayout>

</RelativeLayout>
